--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ div.photo-wrap {
     background-color: white;
     border-radius: 50px;
     box-shadow: 20px 20px 50px rgba(0,0,0,0.3);
+    cursor: pointer;
 
 }
 
@@ -68,7 +69,7 @@ div.photo-wrap {
     padding-left: 12px;
 }
 
-div.content {
+div.testimonial {
     background-image: url("images/pattern-quotes.svg");
     background-size: 10%;
     background-repeat: no-repeat;
