--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     background-size: 100% 10% ;
     color: hsl(240, 38%, 20%);
     font-family: 'Inter', sans-serif;
+    font-weight: 300;
     /* border: 5px solid red; */
     font-size: 2vh;
     text-align: center;
@@ -26,8 +27,9 @@ body {
 .photo {
     width: 70vw;
     height: auto;
-    border-radius: 5%;
+    border-radius: 10px;
     box-shadow: 20px 20px 50px rgba(0,0,0,0.3);
+    /* border: 5px solid yellowgreen; */
     
 }
 
@@ -40,6 +42,7 @@ div.photo-wrap {
     background-repeat: no-repeat;
     background-position: center;
     padding: 10%;
+    /* border: 5px solid goldenrod; */
 }
 
 .nav {
@@ -74,6 +77,7 @@ div.testimonial {
     background-size: 10%;
     background-repeat: no-repeat;
     background-position: top;
+    /* border: 5px solid dodgerblue; */
     
 
 }
@@ -97,10 +101,85 @@ div.testimonial {
 
 .attribution {
     /* display: none; */
-    position: absolute;
-    bottom: 0;
-    width: 100vw;
-    margin: 5px;
+    position: fixed;
+    bottom: 0px;
+    min-width: 100vw;
+    text-align: center;
+    padding-top: 50px;
     font-size: xx-small;
-    /* margin-top: auto; */
+    margin-top: auto;
+    flex-shrink: 0;
+}
+
+@media all and (min-width:600px) {
+    .photo {
+        width: 50vh;
+    }
+
+    body {
+        font-size: 3vh;
+        display: inline;
+    }
+
+    .attribution {
+        position: static;
+    }
+}
+@media all and (min-width:1000px) {
+    body {
+        font-size: 25px;
+        text-align: left;
+    }
+
+    .wrap {
+        
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: center;
+        /* border: 5px solid goldenrod; */
+    }
+
+    .photo {
+        width: 35vw;
+        position: relative;
+        right: 100px;
+    }
+
+    .quote {
+        position: relative;
+        left: 10vw;
+        min-width: 40vw;
+        /* border: 5px solid purple; */
+    }
+
+    div.person {
+        display: flex;
+        position: relative;
+        left: 10vw;
+        min-width: 40vw;
+        /* border: 5px solid goldenrod; */
+        justify-content: flex-start;
+        font-size: 20px;
+        padding-left: 3vh;
+    }
+
+    div.person > * {
+        padding-right: 1vw;
+    }
+
+    .nav {
+        display: float;
+        position: absolute;
+        left: 15%;
+        top: 80%;
+        padding: 13px 10px;
+        background-color: white;
+        border-radius: 50px;
+        box-shadow: 20px 20px 50px rgba(0,0,0,0.3);
+        cursor: pointer;
+    }   
+    
+    
+    
 }
