Prevent selecting nav

--- a/style.css
+++ b/style.css
@@ -59,6 +59,12 @@ div.photo-wrap {
     display: inline;
     position: relative;
     padding: 10px 10px 10px 10px;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; 
 }
 
 .prev {
